<resources>
    <string name="app_name">cs2340_project</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_user_area">UserAreaActivity</string>
    <string name="title_activity_register">RegisterActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_maps">Map</string>
    <string name="acceptDonate">DONATE</string>
    <string name="cancelDonate">Cancel</string>
    <string name="value">Value ($)</string>
    <string name="shortDescription">Short Description</string>
    <string name="fullDescription">Full Description</string>
    <string name="categoryText">Donation Category</string>
    <string name="location">TextView</string>
    <string name="time">TextView</string>
    <string name="shortD">TextView</string>
    <string name="longD">TextView</string>
    <string name="valueD">TextView</string>
    <string name="categoryD">TextView</string>
    <string name="address">TextView</string>
    <string name="phonenumber">TextView</string>
    <string name="latitude">TextView</string>
    <string name="longitude">TextView</string>
    <string name="type">TextView</string>
    <string name="name">TextView</string>
    <string name="donate">DONATE</string>
    <string name="viewDonation">VIEW DONATION</string>
    <string name="nameToSearch">Name to Search</string>
    <string name="searchFinal">SEARCH</string>
    <string name="textView2">Search By:</string>
    <string name="textView3">Category</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="singInButton">SIGN IN</string>
    <string name="cancelButton">Cancel</string>
    <string name="gtmascot">gtmascot</string>
    <string name="welcome">WELCOME</string>
    <string name="loginButton">LOGIN</string>
    <string name="registerButton">REGISTER</string>
    <string name="password_reg">password</string>
    <string name="username_reg">username</string>
    <string name="name_reg">name</string>
    <string name="registerButton_reg">REGISTER</string>
    <string name="cancelButton_reg">Cancel</string>
    <string name="acct_type">Account Type</string>
    <string name="logoutButton">LOGOUT</string>
    <string name="loadButton">LOAD</string>
    <string name="search">SEARCH</string>
    <string name="maps">MAPS</string>
    <string name="errorMessage_donate">Please check the information again</string>
    <string name="errorMessage_signin">Invalid username or password Try again</string>
    <string name="errorMessage_register">Username already exists. Try again</string>
    <string name="errorMessage_search">There are no matching results</string>
</resources>
